hphp/test/zend/bad/ext/pdo_mysql/tests/show_tables.php
<?php
require dirname(__FILE__) . '/../../../ext/pdo/tests/pdo_test.inc';
$db = PDOTest::test_factory(dirname(__FILE__) . '/common.phpt');

print_r($db->query('SHOW TABLES'));